--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,14 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"
+      - "9090:9090"
     expose:
-      - 9093
+      - 9090
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://kafka:9090
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9090
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "my_topic:1:1"
@@ -28,6 +28,16 @@ services:
       KAFKA_MESSAGE_MAX_BYTES: 104857600
     networks:
       - kafka-net
+
+  #consumer:
+   # build:
+    #  context: ./ # Ruta al directorio donde se encuentra el Dockerfile de tu aplicación Java
+    #ports:
+     # - "8081:8081"
+    #depends_on:
+     # - kafka
+    #networks:
+    #  - kafka-net
 networks:
   kafka-net:
     driver: bridge
