--- a/src/cosumer.yml
+++ b/src/cosumer.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: consumer
-          image: consumer:latest
+          image: comsumer
           ports:
-            - containerPort: 8081
+            - containerPort: 8083
