--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8081
-spring.kafka.bootstrap-servers=localhost:9092
+server.port=8082
+spring.kafka.bootstrap-servers=kafka:9093
 spring.kafka.consumer.group-id=my_group
 spring.data.mongodb.uri=mongodb+srv://kafka:r3TO7KpEWOeqaOpe@kafka.euot3hn.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=kafka
